# auturbo_autorace2017_team_honey

./: README.md  READMe.md
HSV_color_picker/: color.py
camera_umd/uvc_camera/src/: camera.cpp
lane_filter/: CMakeLists.txt  package.xml
lane_filter/launch/: lane_filter_node.launch
lane_filter/src/: lane_filter_node.py
line_detect/: CMakeLists.txt  package.xml  setup.py
line_detect/config/: universal_HSV.yaml  universal_parking.yaml
line_detect/include/duckietown_utils/: jpg.py
line_detect/include/line_detector/: __init__.py  line_detector1.py  line_detector2.py  line_detector_interface.py
line_detect/launch/: detect_line.launch
line_detect/src/: callibra_ros.yaml  detect_line.py  detect_parking_line.py  testlog
motor_control/: CMakeLists.txt  package.xml
motor_control/launch/: motor_controller_node.launch
motor_control/scripts/: motor_controller_node.py  parking_controller_node.py  tunnel_controller_node.py
motor_control/scripts/Untitled Folder/: tunnel_controller_node.py  tunnel_controller_node_back.py
turtlebot3_auto_msgs/: CMakeLists.txt  package.xml
turtlebot3_auto_msgs/msg/: AprilTagsWithInfos.msg  ImgSignals.msg  ObstacleImageDetection.msg  ObstacleImageDetectionList.msg  ObstacleProjectedDetection.msg  ObstacleProjectedDetectionList.msg  Rects.msg  SceneSegments.msg  Segment.msg  SegmentList.msg  SignalsDetection.msg  StreetNames.msg
turtlebot3_auto_sensor/: CMakeLists.txt  package.xml  setup.py
turtlebot3_auto_sensor/config/: pc_test.yaml  usb_camera.yaml
turtlebot3_auto_sensor/launch/: image_get_usb_camera.launch
