<?xml version="1.0"?>
<package>
  <name>turtlebot3_auto_msgs</name>
  <version>0.0.1</version>
  <description>
    The turtlebot3_auto_msgs package
  </description>

  <!-- <maintainer email="syliu@mit.edu">Shih-Yuan Liu</maintainer> -->
  <license>GPL 2.0</license>
  <author email="rwjung@robotis.com">Leon Ryuwoon Jung</author>
  <maintainer email="rwjung@robotis.com">Leon Ryuwoon Jung</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_auto/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_auto</url>
  <url type="website">http://wiki.ros.org/turtlebot3_auto</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <export> </export>
</package>
