<?xml version="1.0"?>
<package>
  <name>turtlebot3_auto_sensor</name>
  <version>0.0.0</version>
  <description>The turtlebot3_auto_sensor package</description>

  <maintainer email="leon@todo.todo">leon</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>turtlebot3_auto_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>turtlebot3_auto_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

  <export> </export>
</package>
